--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 #webCam {
-  background-color: rebeccapurple;
-  height: 1200px;
-  width: 1200px;
+  background-color: #82ccdd;
+  height: 1000px;
+  width: 1085px;
+  border-radius: 8px;
+}
+h1{
+  text-align: center;
+}
+p{
+  text-align: center;
+  font-size: 25px;
+  background-color: #ff0000;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 6px;
+  margin: 0 45%;
+  width: 100px;
+}
+h2{
+  background-color: #82ccdd;
+  text-align: center;
+  padding: 10px;
 }
